--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
     "id": "fd76663e-c96f-478a-a500-560613b23884",
     "authors": [
-        "Valency - Made with AMP Config Generator"
+        "Valency"
     ],
-    "origin": "https://github.com/joshuareeves - Made with AMP Config Generator/AMPTemplates.git",
-    "url": "https://github.com/joshuareeves - Made with AMP Config Generator/AMPTemplates",
+    "origin": "https://github.com/joshuareeves/AMPTemplates.git",
+    "url": "https://github.com/joshuareeves/AMPTemplates",
     "imagefile": "",
-    "prefix": "Valency - Made with AMP Config Generator"
+    "prefix": ""
 }
